# rustopoly

./: Cargo.toml  index.html  styles.css  tailwind.config.js
isolog/: Cargo.toml
isolog/src/: lib.rs
scripts/: source_map.sh
server/: Cargo.toml
server/src/: main.rs  server.rs  ws.rs
shared/: Cargo.toml
shared/src/: backend.rs  frontend.rs  lib.rs  spawn_two_way.rs
src/: cell.rs  fmt_panic.rs  game_data.rs  game_state.rs  isolog.rs  main.rs  player.rs  rand.rs  stack_trace.rs
src/components/: dice.rs  in_game_modal.rs  mod.rs
src/hooks/: mod.rs  window_scroll.rs
src/pages/: game.rs  mod.rs
src/utils/: callable_option.rs  fmt_panic.rs  into_either_of.rs  isolog.rs  mod.rs  oneshot_event_emitter.rs  ws.rs
ui/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  tailwind.config.js
ui/src/: app.rs  cell.rs  game_data.rs  game_state.rs  player.rs  server.rs
ui/src/components/: dice.rs  in_game_modal.rs
ui/src/hooks/: redirect.rs
ui/src/pages/: game.rs  login.rs
ui/src/utils/: callable_option.rs  fmt_panic.rs  mod.rs  oneshot_event_emitter.rs
