[workspace]
members = ["isolog", "ui", "server", "shared"]
resolver = "2"

[workspace.dependencies]
tailwind-merge = { path = "../tailwind-merge" }
shared = { path = "./shared" }
isolog = { path = "./isolog" }
any_spawner = { version = "0.1.1" }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
serde = "1.0.214"
serde_json = "1.0.132"
snafu = "0.8.5"
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-serde = "0.9.0"
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
