[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
shared = { workspace = true }
any_spawner = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tarpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
async-tungstenite = { version = "0.28.0", features = ["tokio-runtime"] }
ws_stream_tungstenite = { version = "0.14.0", features = ["tokio_io"] }
async-stream = "0.3.6"
